Add start of live view
Has the center section basically done, except for the timer.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -337,3 +337,244 @@ a {
         }
     }
 }
+
+.live {
+    // background-color: magenta;
+
+    * {
+        box-sizing: border-box;
+    }
+
+    .live-match {
+        $container-height: 260px;
+        $info-height: 55px;
+        $match-padding: 20px;
+
+        $match-height: $container-height - $info-height;
+
+        .container {
+            height: $container-height;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ddd;
+            font-family: "Arial Rounded MT Bold", sans-serif;
+        }
+
+        .info-container {
+            $info-padding: 10px;
+
+            $info-content-height: $info-height - $info-padding * 2;
+
+            width: 100%;
+            height: $info-height;
+            position: absolute;
+            left: 0;
+            top: 0;
+            padding: $info-padding $match-padding;
+            background-color: #ccc;
+            font-size: $info-content-height;
+
+            .logo {
+                width: 150px;
+                height: $info-content-height;
+                background-size: contain;
+                background-repeat: no-repeat;
+
+                &.left {
+                    float: left;
+                    background-image: url('/images/logo-first.png');
+                }
+                &.right {
+                    float: right;
+                    background-image: url('/images/logo-stronghold.png');
+                    background-position: right;
+                }
+            }
+
+            .info-text {
+                $info-text-center-spacing: 50px;
+
+                height: $info-content-height;
+                position: absolute;
+                top: $info-padding;
+                font-size: 0.8em;
+
+                &.match {
+                    right: 50%;
+                    padding-right: $info-text-center-spacing;
+                }
+                &.event {
+                    left: 50%;
+                    padding-left: $info-text-center-spacing;
+                }
+            }
+        }
+
+        .match-container {
+            $match-content-height: $match-height - $match-padding * 2;
+
+            width: 100%;
+            height: $match-height;
+            position: absolute;
+            top: $info-height;
+            padding: $match-padding;
+
+            .center-container {
+                $center-width: 1000px;
+                $timer-scores-width: 600px;
+
+                width: $center-width;
+                height: $match-content-height;
+                position: absolute;
+                left: 50%;
+                top: $match-padding;
+                margin-left: -$center-width / 2;
+
+                .teams {
+                    $team-width: 120px;
+                    $team-height: 34px;
+                    $team-shadow-width: 5px;
+
+                    width: ($center-width - $timer-scores-width) / 2;
+                    height: 100%;
+
+                    .team {
+                        width: $team-width;
+                        height: $team-height;
+                        padding: 3px 20px;
+                        margin-bottom: 8px;
+                        font-size: 24px;
+                        background-color: white;
+                        position: relative;
+
+                        &:first-of-type {
+                            margin-top: 8px;
+                        }
+
+                        &::after {
+                            content: '';
+                            display: block;
+                            box-sizing: border-box;
+                            width: 0;
+                            height: 0;
+                            position: absolute;
+                            top: 0;
+                            border: solid;
+                            border-width: ($team-height / 2) 30px;
+                            border-color: transparent white;
+                        }
+                    }
+
+                    &.left {
+                        float: left;
+                    }
+                    &.right {
+                        float: right;
+                    }
+
+                    &.left .team {
+                        margin-left: auto;
+                        text-align: right;
+                        border-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.15)) 1 100% stretch;
+                        border-width: 0 $team-shadow-width 0 0;
+
+                        &::after {
+                            right: $team-width - $team-shadow-width;
+                            border-left-width: 0;
+                        }
+                    }
+                    &.right .team {
+                        border-image: linear-gradient(to left, transparent, rgba(0, 0, 0, 0.15)) 1 100% stretch;
+                        border-width: 0 0 0 $team-shadow-width;
+
+                        &::after {
+                            left: $team-width - $team-shadow-width;
+                            border-right-width: 0;
+                        }
+                    }
+                }
+
+                .timer-scores {
+                    $timer-height: 40px;
+
+                    width: $timer-scores-width;
+                    height: 100%;
+                    position: absolute;
+                    left: 50%;
+                    top: 0;
+                    margin-left: -$timer-scores-width / 2;
+
+                    .timer {
+                        width: 100%;
+                        height: $timer-height;
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        background-color: #bbb;
+                        font-size: $timer-height;
+                    }
+
+                    .timer-count {
+                        width: 100px;
+                        height: 100%;
+                        margin-left: auto;
+                        margin-right: auto;
+                        text-align: center;
+                        font-size: 0.8em;
+                    }
+
+                    .score {
+                        $flag-height: 20px;
+
+                        width: 50%;
+                        height: $match-content-height - $timer-height - $flag-height;
+                        margin-top: $timer-height;
+                        text-align: center;
+                        font-size: 80px;
+                        padding-top: 5px;
+
+                        &.left {
+                            float: left;
+                        }
+                        &.right {
+                            float: right;
+                        }
+
+                        &.red {
+                            $red: #f16567;
+                            background-color: $red;
+                            border-color: $red;
+
+                            &::after {
+                                border-left-color: $red;
+                                border-right-color: $red;
+                            }
+                        }
+                        &.blue {
+                            $blue: #7291ca;
+                            background-color: $blue;
+
+                            &::after {
+                                border-left-color: $blue;
+                                border-right-color: $blue;
+                            }
+                        }
+
+                        &::after {
+                            content: '';
+                            display: block;
+                            box-sizing: border-box;
+                            width: 50%;
+                            border: 0px solid transparent;
+                            border-width: 0 ($timer-scores-width / 4) $flag-height;
+                            position: absolute;
+                            bottom: 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
