--- a/scss/style.scss
+++ b/scss/style.scss
@@ -657,6 +657,31 @@ a {
                     opacity: 0.3;
                 }
             }
+            
+            .timer {
+                overflow: hidden;
+            }
+            .timer-fill {
+                position: absolute;
+                width: 75%;
+                height: 100%;
+                background-color: #23C575;
+                border-radius: 0 10px 10px 0;
+                transition: border-radius 0.5s ease;
+
+                &.yellow {
+                    background-color: yellow;
+                }
+                &.red {
+                    background-color: red;
+                    border-radius: 0 0 0 0;
+                }
+            }
+            .timer-count {
+                position: relative;
+                background-color: rgba(255, 255, 255, 0.7);
+                box-shadow: 0px 0px 20px 0px rgba(50, 50, 50, 0.5);
+            }
         }
     }
 }
