--- a/scss/style.scss
+++ b/scss/style.scss
@@ -686,31 +686,57 @@ a {
 }
 
 .cp-live {
-    .scores {
+    .center-container {
         width: 500px;
-        position: relative;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .scores {
+        width: 100%;
+        height: 150px;
+        position: relative;
 
         .score {
             width: 50%;
             height: 150px;
-            position: absolute;
             text-align: center;
             font-size: 80px;
             border: 0;
+            padding: 0;
 
             &.left {
-                left: 0;
+                float: left;
             }
             &.right {
-                right: 0;
+                float: right;
             }
             &.red {
                 background-color: $red;
             }
             &.blue {
                 background-color: $blue;
+            }
+        }
+    }
+
+    .teams-container {
+        width: 100%;
+
+        .teams {
+            width: 50%;
+
+            &.left {
+                float: left;
+            }
+            &.right {
+                float: right;
+            }
+
+            .team {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
             }
         }
     }
