--- a/scss/style.scss
+++ b/scss/style.scss
@@ -698,7 +698,7 @@ a {
     }
     .wide-container {
         width: 100%;
-        height: 180px;
+        height: 230px;
     }
     .left-container, .right-container {
         width: 50%;
@@ -713,6 +713,15 @@ a {
     .right-container {
         float: right;
         padding-right: 25%;
+    }
+
+    .match-info {
+        text-align: center;
+
+        .match-key {
+            margin-bottom: 20px;
+            font-size: 20px;
+        }
     }
 
     .timer {
