Add timer controls

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -687,7 +687,7 @@ a {
 
 .cp-live {
     background-color: #ddd;
-    padding-top: 60px;
+    padding-top: 40px;
 
     .center-container {
         width: 1000px;
@@ -698,7 +698,7 @@ a {
     }
     .wide-container {
         width: 100%;
-        height: 230px;
+        height: 260px;
     }
     .left-container, .right-container {
         width: 50%;
@@ -721,6 +721,33 @@ a {
         .match-key {
             margin-bottom: 20px;
             font-size: 20px;
+        }
+    }
+
+    .time-buttons {
+        width: 50%;
+        height: 30px;
+        margin-left: auto;
+        margin-right: auto;
+
+        .time-button {
+            width: 25%;
+            height: 100%;
+            line-height: 30px;
+            float: left;
+            text-align: center;
+            background-color: #eee;
+            box-sizing: border-box;
+            border-left: 1px solid #ccc;
+            cursor: pointer;
+
+            &:first-of-type {
+                border: 0;
+            }
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 
